@@ -20,13 +20,18 @@
 #include <setjmp.h>
 #include <stdint.h>
 #include <unwind.h>
+#include <bits/wordsize.h>
 
+/* On s390{,x}, CFA is always 96 (resp. 160) bytes above actual
+   %r15.  */
 #define _JMPBUF_CFA_UNWINDS_ADJ(_jmpbuf, _context, _adj) \
-  _JMPBUF_UNWINDS_ADJ (_jmpbuf, (void *) _Unwind_GetCFA (_context), _adj)
+  _JMPBUF_UNWINDS_ADJ (_jmpbuf,					\
+		       (void *) (_Unwind_GetCFA (_context)	\
+				 - 32 - 2 * __WORDSIZE), _adj)
 
-#define _JMPBUF_UNWINDS_ADJ(_jmpbuf, _address, _adj)	 \
-  ((uintptr_t) (_address) - (_adj)			 \
+#define _JMPBUF_UNWINDS_ADJ(_jmpbuf, _address, _adj)		\
+  ((uintptr_t) (_address) - (_adj)				\
    < (uintptr_t) (_jmpbuf)->__gregs[__JB_GPR15] - (_adj))
 
-/* We use the normal lobngjmp for unwinding.  */
+/* We use the normal longjmp for unwinding.  */
 #define __libc_unwind_longjmp(buf, val) __libc_longjmp (buf, val)
